@@ -209,7 +209,7 @@ class Thor
       end
 
       say_status :run, desc, config.fetch(:verbose, true)
-      system(command) unless options[:pretend]
+      `#{command}` unless options[:pretend]
     end
 
     # Executes a ruby script (taking into account WIN32 platform quirks).
