@@ -220,7 +220,7 @@ describe Thor::Actions do
 
   describe "#run" do
     before(:each) do
-      runner.should_receive(:system).with("ls")
+      runner.should_receive(:`).with("ls")
     end
 
     it "executes the command given" do
@@ -244,7 +244,7 @@ describe Thor::Actions do
   describe "#run_ruby_script" do
     before(:each) do
       Thor::Util.stub!(:ruby_command).and_return("/opt/jruby")
-      runner.should_receive(:system).with("/opt/jruby script.rb")
+      runner.should_receive(:`).with("/opt/jruby script.rb")
     end
 
     it "executes the ruby script" do
@@ -262,30 +262,30 @@ describe Thor::Actions do
 
   describe "#thor" do
     it "executes the thor command" do
-      runner.should_receive(:system).with("thor list")
+      runner.should_receive(:`).with("thor list")
       action :thor, :list, :verbose => true
     end
 
     it "converts extra arguments to command arguments" do
-      runner.should_receive(:system).with("thor list foo bar")
+      runner.should_receive(:`).with("thor list foo bar")
       action :thor, :list, "foo", "bar"
     end
 
     it "converts options hash to switches" do
-      runner.should_receive(:system).with("thor list foo bar --foo")
+      runner.should_receive(:`).with("thor list foo bar --foo")
       action :thor, :list, "foo", "bar", :foo => true
 
-      runner.should_receive(:system).with("thor list --foo 1 2 3")
+      runner.should_receive(:`).with("thor list --foo 1 2 3")
       action :thor, :list, :foo => [1,2,3]
     end
 
     it "logs status" do
-      runner.should_receive(:system).with("thor list")
+      runner.should_receive(:`).with("thor list")
       action(:thor, :list).must == "         run  thor list from \".\"\n"
     end
 
     it "does not log status if required" do
-      runner.should_receive(:system).with("thor list --foo 1 2 3")
+      runner.should_receive(:`).with("thor list --foo 1 2 3")
       action(:thor, :list, :foo => [1,2,3], :verbose => false).must be_empty
     end
   end
